sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_EstimatedTime_Of_DepartureUTC__c.field-meta.xml
<CustomField>
    <fullName>IRR_EstimatedTime_Of_DepartureUTC__c</fullName>
    <label>EstimatedTime Of DepartureUTC</label>
    <type>DateTime</type>
</CustomField>