sas-core/main/default/objects/IRR_EventLog__c/fields/Is_Second_Communication_Send__c.field-meta.xml
<CustomField>
    <fullName>Is_Second_Communication_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Communication sent</label>
    <type>Checkbox</type>
</CustomField>