sas-core/main/default/objects/IRR_EventLog__c/fields/Last_Boarding_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Boarding_Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Boarding Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>